@@ -1,3 +1,8 @@
+Sat May  6 17:12:37 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* standalone.exp: klist test - added new line to prevent an OSF/1
+	        expect bug which would hang the klist process in waiting.
+
 Fri May  5 12:49:19 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* rcp.exp: (rcp_test()): Encrypted rcp are no longer expected to
